--- a/aio/content/examples/animations/src/app/hero-list-page.component.css
+++ b/aio/content/examples/animations/src/app/hero-list-page.component.css
@@ -7,19 +7,24 @@
 
 .heroes li {
   position: relative;
+  height: 2.3em;
+  overflow:hidden;
+  margin: .5em;
+}
+
+.heroes li > .inner {
   cursor: pointer;
   background-color: #EEE;
-  margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
   width: 19em;
 }
 
-.heroes li:hover {
+.heroes li:hover > .inner {
   color: #607D8B;
   background-color: #DDD;
-  left: .1em;
+  transform: translateX(.1em);
 }
 
 .heroes a {
