--- a/aio/content/examples/animations/src/app/hero-list-page.component.html
+++ b/aio/content/examples/animations/src/app/hero-list-page.component.html
@@ -9,8 +9,10 @@
 <ul class="heroes" [@filterAnimation]="heroTotal">
 <!-- #enddocregion filter-animations -->  
   <li *ngFor="let hero of heroes" class="hero">
-    <span class="badge">{{ hero.id }}</span>
-    <span>{{ hero.name }}</span>
+    <div class="inner">
+      <span class="badge">{{ hero.id }}</span>
+      <span>{{ hero.name }}</span>
+    </div>
   </li>
 <!-- #docregion filter-animations -->  
 </ul>
